--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
 							<li><a href="#profile"><span class="menu-item-span">Profile</span></a></li>
 							<li><a href="#portfolio"><span class="menu-item-span">Portfolio</span></a></li>
 							<li><a href="#resume"><span class="menu-item-span">Resume</span></a></li>
-							<li><a href="#contact"><span class="menu-item-span">Contact</span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -69,7 +68,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-                            <h1 class="h1 m-b-15">Hi!</h1>
+                            <h1 class="h1 m-b-15">Welcome!</h1>
                             <h1 class="h6 m-b-60">My name is Josh and I am a Web Developer</h1>
 						</div>
 					</div>
@@ -81,25 +80,25 @@
 			<!-- Page Header end-->
 
 			<!-- Profile-->
-			<section class="module module-grey" id="profile">
+			<section class="module module-gray" id="profile">
 				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<div class="m-title c-align">
-								<h2>Who am I?</h2>
+                    <div class="row">
+                        <div class="col-md-4"></div>
+                        <div class="col-md-4">
+                            <div class="m-title c-align">
+								<p><img id="prof-pic" src="assets/images/prof-pic.jpg" alt=""></p>
 							</div>
-						</div>
-					</div>
+                        </div>
+                        <div class="col-md-4"></div>
+                    </div>
 					<div class="row">
-						<div class="col-md-4">
-							<p><img src="assets/images/im.jpg" alt=""></p>
-						</div>
-						<div class="col-md-4">
-							<h5>Profesional Profile</h5>
-							<p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest. Map where your photos.</p>
-							<p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest. Map where your photos.</p>
-						</div>
-						<div class="col-md-4">
+                        <div class="col-md-6">
+                            <h5>About me</h5>
+                            <p>I am an aspiring web developer who wants to be on the forefront of responsive web development. The ability to create a product that people can smile at and enjoy is what has made web development a serious passion of mine and I continue to build on that passion with each day.</p>
+                            <p>Email: jfriedman139@gmail.com</p>
+                            <p>Phone: 856-287-8499</p>
+                        </div>
+						<div class="col-md-6">
 							<h5>My Skills</h5>
 							<div class="progress-item">
 								<div class="progress-title">HTML / CSS3 / SASS</div>
@@ -139,7 +138,7 @@
 						<div class="col-md-12">
 							<div class="m-title c-align">
 								<h2>Portfolio</h2>
-								<h6>An eye for detail makes our works excellent</h6>
+								<h6>Projects I have worked on.</h6>  
 							</div>
 						</div>
 					</div>
@@ -178,7 +177,7 @@
 			<!-- Portfolio end-->
 
 			<!-- Resume-->
-			<section class="module module-grey" id="resume">
+			<section class="module module-divider-top module-gray" id="resume">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
@@ -218,7 +217,8 @@
 										<div class="timeline-body">
 											<h5 class="timeline-title">Web Developer Intern</h5>
 											<h6 class="timeline-description">Red Tettemer O'Connell + Partners | September 2017 - December 2017</h6>
-											<p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest.</p>
+											<p>Built websites and ad-banners for companies such as Under Armour and Lenox. Maintained various Wordpress websites. Debugged and tested websites before release. Worked with a team of designers and developers to reach an end goal. 
+</p>
 										</div>
 									</div>
 								</li>
@@ -232,48 +232,6 @@
 			<!-- Resume end-->
 
 			<!-- Contact-->
-			<section class="module" id="contact">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<div class="m-title c-align">
-								<h2>Let's talk</h2>
-								<h6>Drop us a line or give us a ring</h6>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<form id="contact-form" method="post" novalidate>
-								<div class="row">
-									<div class="form-group col-sm-4">
-										<input class="form-control" type="text" name="name" placeholder="Name" required="">
-										<p class="help-block text-danger"></p>
-									</div>
-									<div class="form-group col-sm-4">
-										<input class="form-control" type="email" name="email" placeholder="E-mail" required="">
-										<p class="help-block text-danger"></p>
-									</div>
-									<div class="form-group col-sm-4">
-										<input class="form-control" type="text" name="phone" placeholder="Phone" required="">
-										<p class="help-block text-danger"></p>
-									</div>
-									<div class="form-group col-sm-12">
-										<textarea class="form-control" name="message" placeholder="Message" rows="8" required="" style="height: 184px; ;"></textarea>
-									</div>
-									<div class="form-group col-sm-12">
-										<div class="text-center m-t-20">
-											<button class="btn btn-round btn-brand" type="submit"><span>Send Message</span></button>
-										</div>
-									</div>
-								</div>
-							</form>
-							<!-- Ajax response-->
-							<div class="ajax-response text-center" id="contact-response"></div>
-						</div>
-					</div>
-				</div>
-			</section>
 
 			<!-- Map-->
 			
