added form back

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 											<h5 class="timeline-title">Web Developer Intern</h5>
 											<h6 class="timeline-description">Red Tettemer O'Connell + Partners | September 2017 - December 2017</h6>
 											<p>Built websites and ad-banners for companies such as Under Armour and Lenox. Maintained various Wordpress websites. Debugged and tested websites before release. Worked with a team of designers and developers to reach an end goal. 
-</p>
+                                            </p>
 										</div>
 									</div>
 								</li>
@@ -233,6 +233,50 @@
 
 			<!-- Contact-->
 
+            
+            <section class="module" id="contact">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="m-title c-align">
+								<h2>Let's talk</h2>
+								<h6>Drop us a line or give us a ring</h6>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<form id="contact-form" method="post" novalidate>
+								<div class="row">
+									<div class="form-group col-sm-4">
+										<input class="form-control" type="text" name="name" placeholder="Name" required="">
+										<p class="help-block text-danger"></p>
+									</div>
+									<div class="form-group col-sm-4">
+										<input class="form-control" type="email" name="email" placeholder="E-mail" required="">
+										<p class="help-block text-danger"></p>
+									</div>
+									<div class="form-group col-sm-4">
+										<input class="form-control" type="text" name="phone" placeholder="Phone" required="">
+										<p class="help-block text-danger"></p>
+									</div>
+									<div class="form-group col-sm-12">
+										<textarea class="form-control" name="message" placeholder="Message" rows="8" required="" style="height: 184px; ;"></textarea>
+									</div>
+									<div class="form-group col-sm-12">
+										<div class="text-center m-t-20">
+											<button class="btn btn-round btn-brand" type="submit"><span>Send Message</span></button>
+										</div>
+									</div>
+								</div>
+							</form>
+							<!-- Ajax response-->
+							<div class="ajax-response text-center" id="contact-response">Thank you for contacting me</div>
+						</div>
+					</div>
+				</div>
+			</section>
+            
 			<!-- Map-->
 			
 			<!-- Map end-->
@@ -259,8 +303,7 @@
 		<script src="assets/js/jquery-2.2.4.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 		<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-		<!--<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA0rANX07hh6ASNKdBr4mZH0KZSqbHYc3Q"></script>-->
-		<script src="assets/js/plugins.min.js"></script>
+		<script src="assets/js/plugins.js"></script>
 		<script src="assets/js/custom.min.js"></script>
 	</body>
 </html>
