--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 							<li><a href="#profile"><span class="menu-item-span">Profile</span></a></li>
 							<li><a href="#portfolio"><span class="menu-item-span">Portfolio</span></a></li>
 							<li><a href="#resume"><span class="menu-item-span">Resume</span></a></li>
+                            <li><a href="#contact"><span class="menu-item-span">Contact</span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -238,9 +239,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="m-title c-align">
-								<h2>Let's talk</h2>
-								<h6>Drop us a line or give us a ring</h6>
+							<div class="m-title c-align" id="form-title">
+								<h2>Contact me</h2>
+								<h6>Feel free to send me a message!</h6>
 							</div>
 						</div>
 					</div>
@@ -271,7 +272,7 @@
 								</div>
 							</form>
 							<!-- Ajax response-->
-							<div class="ajax-response text-center" id="contact-response">Thank you for contacting me</div>
+							<div class="ajax-response text-center" id="contact-response"><h2>Thank you for contacting me</h2></div>
 						</div>
 					</div>
 				</div>
