--- a/index.html
+++ b/index.html
@@ -87,19 +87,17 @@
                         <div class="col-md-4"></div>
                         <div class="col-md-4">
                             <div class="m-title c-align">
-								<p><img id="prof-pic" src="assets/images/prof-pic.jpg" alt=""></p>
+								<p><img class="wow fadeInUp" id="prof-pic" src="assets/images/prof-pic.jpg" alt=""></p>
 							</div>
                         </div>
                         <div class="col-md-4"></div>
                     </div>
 					<div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 wow fadeInLeft">
                             <h5>About me</h5>
                             <p>I am an aspiring web developer who wants to be on the forefront of responsive web development. The ability to create a product that people can smile at and enjoy is what has made web development a serious passion of mine and I continue to build on that passion with each day.</p>
-                            <p>Email: jfriedman139@gmail.com</p>
-                            <p>Phone: 856-287-8499</p>
                         </div>
-						<div class="col-md-6">
+						<div class="col-md-6 wow fadeInRight">
 							<h5>My Skills</h5>
 							<div class="progress-item">
 								<div class="progress-title">HTML / CSS3 / SASS</div>
@@ -137,13 +135,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="m-title c-align">
+							<div class="m-title c-align wow fadeInUp">
 								<h2>Portfolio</h2>
 								<h6>Projects I have worked on.</h6>  
 							</div>
 						</div>
 					</div>
-					<div class="row row-portfolio">
+					<div class="row row-portfolio wow fadeInUp">
 						<div class="grid-sizer"></div>
 						<div id="irwin" class="portfolio-item js-tilt web design ">
 							<div class="portfolio-wrapper">
@@ -182,7 +180,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="m-title c-align">
+							<div class="m-title c-align wow fadeInUp">
 								<h2>Resume</h2>
 								<h6>My education and experience</h6>
 							</div>
@@ -191,7 +189,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<ul class="timeline">
-								<li>
+								<li class="wow fadeInLeft">
 									<div class="timeline-badge"></div>
 									<div class="timeline-panel">
 										<div class="timeline-preview"><img src="assets/images/features/CCC.jpg" alt=""></div>
@@ -201,7 +199,7 @@
 										</div>
 									</div>
 								</li>
-								<li>
+								<li class="wow fadeInRight">
 									<div class="timeline-badge"></div>
 									<div class="timeline-panel">
 										<div class="timeline-preview"><img src="assets/images/features/RUTC.jpg" alt=""></div>
@@ -211,7 +209,7 @@
 										</div>
 									</div>
 								</li>
-								<li>
+								<li class="wow fadeInLeft">
 									<div class="timeline-badge"></div>
 									<div class="timeline-panel">
 										<div class="timeline-preview"><img src="assets/images/features/rtop.jpg" alt=""></div>
@@ -225,7 +223,7 @@
 								</li>
 								<div class="timeline-top"></div>
 							</ul>
-							<div class="text-center"><a class="btn btn-lg btn-gray" href="https://drive.google.com/open?id=14MEd8z7VmWoSzHmVkQhzHzjIQWtikRxZy4idxsUVyYY" target="_blank"><span>Download Resume</span></a></div>
+							<div class="text-center wow fadeInUp"><a class="btn btn-lg btn-gray" href="https://drive.google.com/open?id=14MEd8z7VmWoSzHmVkQhzHzjIQWtikRxZy4idxsUVyYY" target="_blank"><span>Download Resume</span></a></div>
 						</div>
 					</div>
 				</div>
@@ -239,14 +237,14 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="m-title c-align" id="form-title">
+							<div class="m-title c-align wow fadeInUp" id="form-title">
 								<h2>Contact me</h2>
 								<h6>Feel free to send me a message!</h6>
 							</div>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-12">
+						<div class="col-md-12 wow fadeInUp">
 							<form id="contact-form" method="post" novalidate>
 								<div class="row">
 									<div class="form-group col-sm-4">
@@ -306,5 +304,7 @@
 		<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 		<script src="assets/js/plugins.js"></script>
 		<script src="assets/js/custom.min.js"></script>
+        <script src="assets/js/wow.js"></script>
+        <script>new WOW().init();</script>
 	</body>
 </html>
