--- a/index.html
+++ b/index.html
@@ -302,9 +302,8 @@
 		<script src="assets/js/jquery-2.2.4.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 		<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-		<script src="assets/js/plugins.js"></script>
+		<script src="assets/js/plugins.min.js"></script>
 		<script src="assets/js/custom.min.js"></script>
         <script src="assets/js/wow.js"></script>
-        <script>new WOW().init();</script>
 	</body>
 </html>
