minified css files

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		<link href="assets/css/vertical.min.css" rel="stylesheet">
 		<link href="assets/css/animate.css" rel="stylesheet">
 		<!-- Template core CSS-->
-		<link href="assets/css/template.css" rel="stylesheet">
+		<link href="assets/css/template.min.css" rel="stylesheet">
         <!-- Color template -->
-        <link href="assets/css/template-cyan.css" rel="stylesheet">
+        <link href="assets/css/template-cyan.min.css" rel="stylesheet">
 	</head>
 	<body>
 
