added link to github account

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 						</div>
 					</div>
 				</div>
+				<div class="text-center wow fadeInUp portfolio-space"><a class="btn btn-lg btn-gray" href="https://github.com/jfriedman139" target="_blank"><span>Visit my Github</span></a></div>
 			</section>
 			<!-- Portfolio end-->
 
